--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-blur": "~12.2.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "fbjs": "^3.0.5",
     "ionicons": "^7.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
